examples/errors/this_outside_class.lox
print this;

fun notAMethod() {
  print this;
}
